--- a/p/pa/pai/paidonresults.com.html
+++ b/p/pa/pai/paidonresults.com.html
@@ -1,82 +1,157 @@
-<!--The following is the downloaded HTML source of the paidonresults.com privacy policy that was archived on 2005-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051213212410id_/http%3A//www.paidonresults.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the paidonresults.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615012914id_/http%3A//www.paidonresults.com/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>Paid On Results - Privacy Statement</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+<title>Paid On Results - Privacy Policy</title>
 <meta name="Description" content="Paid On Results can help Affiliates and Merchants make money as online partners.">
 <meta name="Keywords" content="paid on results, online affiliate programs, network marketing, internet marketing">
 <meta name="robots" content="index,follow">
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="pics-label" content="(pics-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; comment &quot;ICRAonline v2.0&quot; l gen true for &quot;http://www.paidonresults.com&quot;  r (nz 1 vz 1 lz 1 oz 1 cz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.paidonresults.com&quot;  r (n 0 s 0 v 0 l 0))">
-<link rel="STYLESHEET" type="text/css" href="por.css">
+
+<script language="JavaScript" type="text/javascript">
+var navigation = "home";
+var navtwo = "";
+var navlinethree = "no";
+</script>
+
+<style type="text/css">
+<!--
+.style1 {color : #000000; font-family: Arial, Helvetica, sans-serif;}
+-->
+</style>
+<!-- head and begin body -->
+<!-- style sheet used starts -->
+<link href="stylesheets/styles.css" rel="stylesheet" type="text/css">
+<!-- rollovers script -->
+<script src="scripts/rollover.js" type="text/javascript"></script>
+<!-- link style throughout unless specified -->
+<style type="text/css">
+a { color: #3366CC; text-decoration: underline;}
+a:hover { color: #3366CC; text-decoration: none;}
+</style>
+<!-- bodytext style throughout unless specified -->
+<style type="text/css">
+body,td,th { font-family: Arial, sans-serif; font-size: 12px; color: #000000;}
+</style>
+
 </head>
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 
-<body bgcolor="#FFFFFF" text="#000000" link="#3366CC" vlink="#3366CC" alink="#C0C0C0" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0" marginwidth="0" marginheight="0">
-
-<div align="center"><table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#3366CC">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-	<td align="center"><img src="images/masthead.jpg" width="750" height="90" alt="" border="0"></td>
-</tr>
-</tbody></table></div>
-
-<div align="center"><table width="750" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td>
-<table width="100%" border="0" cellspacing="3" cellpadding="3"><tbody><tr><td><font face="Arial,Helvetica,sans-serif" size="2"><div align="center"><a href="http://www.paidonresults.com/">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="overview.html">Overview</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="merchants.html">Merchants / Advertisers</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="affiliates.html">Affiliates / Publishers</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="contact-us.html">Contact Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="abuse.html">Report Abuse</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="log-in.html">Login</a></div>
-
-<p></p><div align="center"><table border="0" cellspacing="2" cellpadding="2">
+<td valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0">
+<tbody><tr><td background="images/template/side-bar.gif" bgcolor="#3366CC"><img src="images/template/inv-5x5px.gif" width="5" height="90"></td>
+</tr></tbody></table></td>
+<td width="760"><table width="760" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-	<td align="right"><font face="Arial,Helvetica,sans-serif" size="5"><strong><em>Privacy Statement!</em></strong></font></td>
-	<td align="left"><img src="images/paid-on-results-shadow-man.gif" width="19" height="25" alt="" border="0"></td>
+<td background="images/template/side-bar.gif" bgcolor="#3366CC"><table width="750" border="0" align="center" cellpadding="0" cellspacing="0" background="images/template/masthead.gif">
+<tbody><tr><td><img src="images/template/masthead.gif" alt="Paid On Results" width="750" height="90"></td></tr>
+</tbody></table></td></tr>
+<tr><td>
+
+<!-- navigation begin -->
+<!-- navigation begin -->
+<table width="720" border="0" align="center" cellpadding="0" cellspacing="0">
+<tbody><tr>
+<td><table border="0" align="center" cellpadding="0" cellspacing="0">
+<tbody><tr>
+<td align="center"><a href="index.html">Home</a></td>
+<td><img src="images/general/separator.gif" width="21" height="20"></td>
+<td align="center"><a href="overview.html">Overview</a></td>
+<td><img src="images/general/separator.gif" width="21" height="20"></td>
+<td align="center"><a href="merchants.html">Merchants / Advertisers</a></td>
+<td><img src="images/general/separator.gif" width="21" height="20"></td>
+<td align="center"><a href="affiliates.html">Affiliates / Publishers</a></td>
+<td><img src="images/general/separator.gif" width="21" height="20"></td>
+<td align="center"><a href="knowledge.html">Knowledge Base</a></td>
+<td><img src="images/general/separator.gif" width="21" height="20"></td>
+<td align="center"><a href="contact-us.html">Contact Us</a></td>
+<td><img src="images/general/separator.gif" width="21" height="20"></td>
+<td align="center"><a href="log-in.html">Login</a></td>
+</tr></tbody></table></td></tr></tbody></table>
+<!-- navigation end -->
+
+<!-- navigation end -->
+
+</td></tr>
+<tr><td><img src="images/template/inv-5x5px.gif" width="760" height="15"></td></tr>
+<tr>
+<td><div align="center"><font face="Arial,Helvetica,sans-serif" size="3"><strong>
+</strong></font>
+<font size="2" face="Arial,Helvetica,sans-serif"><strong><em><br>
+</em></strong></font>
+<span class="QUEST_12"><font face="Arial,Helvetica,sans-serif"><strong>Privacy Policy covering Paid On Results</strong></font></span>
+<br>
+</div>
+<p align="center"><span class="style1"><font face="Arial,Helvetica,sans-serif">Paid On Results Limited <br>
+Olympic House <br>
+142 Queen Street <br>
+Glasgow G1 3BU <br>
+United Kingdom </font>
+</span>
+</p><p align="center"><span class="style1"><font face="Arial,Helvetica,sans-serif"><a href="http://www.paidonresults.com/">http://www.paidonresults.com/</a>
+</font>
+</span>
+</p><p align="justify"><span class="style1"><font face="Arial,Helvetica,sans-serif"><strong>General policy </strong><br>
+Paid On Results respects your privacy. The information that you provide us with or that is gathered automatically helps us and third parties to monitor our service and provide you with the services that you have subscribed to. Please bear in mind that any personal information that you submit through forums, letters/emails for publication and the like may be collected by others. If you have any concerns, questions or comments please <a href="contact-us.html">contact us</a>. 
+</font>
+</span>
+</p><p align="justify"><span class="style1"><font face="Arial,Helvetica,sans-serif"><strong>Email newsletters </strong><br>
+Paid On Results operates email newsletters on its site which are free to sign up to. What we ask of you is your email address at times we may ask you for further information which is used for demographic purposes. We do not give our email lists out to other parties unless you choose to opt in to a scheme whereby third parties may use your details for their own purposes. Our newsletters may contain promotions or advertisements from various businesses, information on other sites or services that we offer. If at any time you wish to unsubscribe from our newsletter you may do so by visiting the site you signed up with and using the unsubscribe facility. You may also email the website editor although it may take a longer time before your email address is removed than with the automatic unsubscribe facility. 
+</font>
+</span>
+</p><p align="justify"><span class="style1"><font face="Arial,Helvetica,sans-serif"><strong>Registration </strong><br>
+Our site may require you to register with us. This is to allow access to extra services that we provide for you. The information is not used for sending you newsletters or promotions unless stated. 
+</font>
+</span>
+</p><p align="justify"><span class="style1"><font face="Arial,Helvetica,sans-serif">Third party sites <br>
+Our site operates with third party sites (such as online shops), we may, on occasion, share non-personal aggregated information to these third parties. 
+</font>
+</span>
+</p><p align="justify"><span class="style1"><font face="Arial,Helvetica,sans-serif"><strong>Cookies </strong><br>
+We use 'cookies' to track advertising information and website usage. On certain sites or third party sites we may utilise cookies for other purposes such as order tracking in online shops or for targeting advertisements to particular types of visitor. 
+</font>
+</span>
+</p><p align="justify"><span class="style1"><font face="Arial,Helvetica,sans-serif"><strong>Surveys </strong><br>
+On occasion we may conduct online surveys. This is used to gauge our service, collect demographic information and other information that we may find useful. These surveys are optional. We may share non-personal, aggregated information with third parties. 
+</font>
+</span>
+</p><p align="justify"><span class="style1"><font face="Arial,Helvetica,sans-serif"><strong>Security </strong><br>
+While we strive to keep the information that you supply directly or indirectly secure please be aware that the Internet is not a fully secure medium. 
+</font>
+</span>
+</p><p align="justify"><span class="style1"><font face="Arial,Helvetica,sans-serif"><strong>Usage of information </strong><br>
+If requested we may submit your information to local or government authorities. 
+</font>
+</span>
+</p><p align="justify"><span class="style1"><font face="Arial,Helvetica,sans-serif"><strong>Corrections/updates </strong><br>
+You may unsubscribe from our newsletters using the facilities available on the website you signed up with or by emailing the relevant online editor. If you have any problems please <a href="contact-us.html">contact us</a>. 
+</font>
+</span>
+</p><p align="justify"><span class="style1"><font face="Arial,Helvetica,sans-serif"><strong>Policy changes</strong> <br>
+By using our site you agree to accept this privacy policy and are aware that our policy may change with time. Any changes to this policy will appear on this web page. 
+</font>
+</span>
+</p><p align="center" class="style1"><font face="Arial,Helvetica,sans-serif">Registered under the Data Protection Act. Registration No. Z8456502 </font></p></td>
 </tr>
-</tbody></table></div>
-
-<p><font size="3" color="#3366CC"><strong>Privacy Policy covering Paid On Results</strong></font>
-
-</p><p>Paid On Results Limited
-<br>Olympic House
-<br>142 Queen Street
-<br>Glasgow G1 3BU
-<br>United Kingdom
-
-</p><p><strong><a href="http://www.paidonresults.com">http://www.paidonresults.com</a></strong>
-
-</p><p><font size="3"><strong>General policy</strong></font>
-<br>Paid On Results respects your privacy. The information that you provide us with or that is gathered automatically helps us and third parties to monitor our service and provide you with the services that you have subscribed to. Please bear in mind that any personal information that you submit through forums, letters/emails for publication and the like may be collected by others. If you have any concerns, questions or comments please <a href="http://www.paidonresults.com/contact-us.html">contact us</a>.
-
-</p><p><font size="3"><strong>Email newsletters</strong></font>
-<br>Paid On Results operates email newsletters on its site which are free to sign up to. What we ask of you is your email address at times we may ask you for further information which is used for demographic purposes. We do not give our email lists out to other parties unless you choose to opt in to a scheme whereby third parties may use your details for their own purposes. Our newsletters may contain promotions or advertisements from various businesses, information on other sites or services that we offer. If at any time you wish to unsubscribe from our newsletter you may do so by visiting the site you signed up with and using the unsubscribe facility. You may also email the website editor although it may take a longer time before your email address is removed than with the automatic unsubscribe facility.
-
-</p><p><font size="3"><strong>Registration</strong></font>
-<br>Our site may require you to register with us. This is to allow access to extra services that we provide for you. The information is not used for sending you newsletters or promotions unless stated.
-
-</p><p><font size="3"><strong>Third party sites</strong></font>
-<br>Our site operates with third party sites (such as online shops), we may, on occasion, share non-personal aggregated information to these third parties.
-
-</p><p><font size="3"><strong>Cookies</strong></font>
-<br>We use 'cookies' to track advertising information and website usage. On certain sites or third party sites we may utilise cookies for other purposes such as order tracking in online shops or for targeting advertisements to particular types of visitor.
-
-</p><p><font size="3"><strong>Surveys</strong></font>
-<br>On occasion we may conduct online surveys. This is used to gauge our service, collect demographic information and other information that we may find useful. These surveys are optional. We may share non-personal, aggregated information with third parties.
- 
-</p><p><font size="3"><strong>Security</strong></font>
-<br>While we strive to keep the information that you supply directly or indirectly secure please be aware that the Internet is not a fully secure medium.
-
-</p><p><font size="3"><strong>Usage of information</strong></font>
-<br>If requested we may submit your information to local or government authorities.
-
-</p><p><font size="3"><strong>Corrections/updates</strong></font>
-<br>You may unsubscribe from our newsletters using the facilities available on the website you signed up with or by emailing the relevant online editor. If you have any problems please <a href="http://www.paidonresults.com/contact-us.html">contact us</a>.
-
-</p><p><font size="3"><strong>Policy changes</strong></font>
-<br>By using our site you agree to accept this privacy policy and are aware that our policy may change with time. Any changes to this policy will appear on this web page.
-
-</p></font><p><font face="Arial,Helvetica,sans-serif" size="2"><strong>Registered under the Data Protection Act. Registration No. Z8456502</strong>
-
-</font></p></td></tr></tbody></table>
-</td></tr></tbody></table></div>
-
-<p></p><div align="center"><font face="Arial,Helvetica,sans-serif" size="1">This site was designed and developed by <a href="http://www.paidonresults.com/"><font color="#808080">Paid On Results Ltd</font></a>. © 2002-2005. All rights reserved.&nbsp;&nbsp;&nbsp;Paid On Results is a trademark of Paid On Results Ltd.<br>Paid On Results <a href="disclaimer-legal.html"><font color="#808080">Disclaimer and Legal Information</font></a>.&nbsp;&nbsp;&nbsp;Paid On Results <a href="privacy.html"><font color="#808080">Privacy Statement</font></a>.&nbsp;&nbsp;&nbsp;Paid On Results <a href="terms.html"><font color="#808080">Terms and Conditions</font></a>.&nbsp;&nbsp;&nbsp;<a href="site-map.html"><font color="#808080">Site Map</font></a>.</font><br></div>
+<tr>
+<td>&nbsp;</td>
+</tr>
+</tbody></table></td>
+<td valign="top"><table width="100%" height="90" border="0" cellpadding="0" cellspacing="0">
+<tbody><tr><td background="images/template/side-bar.gif" bgcolor="#3366CC"><img src="images/template/inv-5x5px.gif" width="5" height="90"></td></tr>
+</tbody></table></td></tr></tbody></table>
+<!-- footer begins -->
+<table width="100%" border="0" cellpadding="0" cellspacing="2">
+<tbody><tr><td align="center"><img src="images/template/inv-5x5px.gif" width="10" height="10"></td></tr>
+<tr><td align="center" class="BLACK_11">This site was designed and developed by <a href="http://www.paidonresults.com">Paid On Results Ltd</a>. © 2002-2006. All rights reserved.&nbsp;&nbsp;&nbsp;Paid On Results is a trademark of Paid On Results Ltd.</td>
+</tr>
+<tr><td align="center" class="BLACK_11">Paid On Results <a href="disclaimer-legal.html">Disclaimer and Legal Information</a>.&nbsp;&nbsp;&nbsp;Paid On Results <a href="privacy.html">Privacy Statement</a>.&nbsp;&nbsp;&nbsp;Paid On Results <a href="terms.html">Terms and Conditions</a>.&nbsp;&nbsp;&nbsp;<a href="site-map.html">Site Map</a>.</td>
+</tr>
+</tbody></table>
+<!-- footer ends -->
 
 
 
-
-<!-- All HTML code, Design and Layout is the Copyright of Paid On Results Ltd. -->
 </body></html>
