--- a/l/le/lex/lexar.com.html
+++ b/l/le/lex/lexar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lexar.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231204142id_/http%3A//www.lexar.com/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lexar.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615013324id_/http%3A//lexar.com/about/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -150,10 +150,11 @@ hbx.pec="";//ERROR CODES
            <select name="url" onchange="Go_global();" style="width:150" class="subnav">
 				<option selected="" value="">Select Country/Region</option>
 				<option value="http://www.lexar.com">North America </option>
-				<option value="http://www.lexar.com/japan/">Japan </option>
+				<option value="http://www.lexar.com/china/">China </option>
 				<option value="http://www.lexar.com/hk/">Hong Kong </option>
-                <option value="http://www.lexar.com/china/">China </option>
-<option value="http://www.lexar.com/de/">Germany </option>
+				<option value="http://www.lexar.com/fr/">France</option>
+				<option value="http://www.lexar.com/de/">Germany</option>
+				<option value="http://www.lexar.com/japan/">Japan </option>
 				</select>
          </td>
        </tr>
@@ -315,7 +316,7 @@ Questions? Comments? Lexar welcomes your questions and comments about privacy. P
 <center><br>
 <table width="800" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td class="bodytext" align="center"><a href="../index.html" class="footer">Home</a> | <a href="../products/index.html" class="footer">Products</a> | <a href="../where/index.html" class="footer">Where to Buy</a> | <a href="../drivers/index.html" class="footer">Downloads</a> | <a href="../support/index.html" class="footer">Support </a>| <a href="../about/index.html" class="footer">Company Info</a> | <a href="../about/contact.html" class="footer">Contact Us</a> | <a href="../newsroom/index.html" class="footer">Newsroom</a>	    <br>© 2005 Lexar Media, Inc. | <a href="../about/sitemap.html" class="footer">Site Map</a> | <a href="../about/privacy.html" class="footer">Privacy Policy</a></td>
+    <td class="bodytext" align="center"><a href="../index.html" class="footer">Home</a> | <a href="../products/index.html" class="footer">Products</a> | <a href="../where/index.html" class="footer">Where to Buy</a> | <a href="../drivers/index.html" class="footer">Downloads</a> | <a href="../support/index.html" class="footer">Support </a>| <a href="../about/index.html" class="footer">Company Info</a> | <a href="../about/contact.html" class="footer">Contact Us</a> | <a href="../newsroom/index.html" class="footer">Newsroom</a>	    <br>© 2006 Lexar Media, Inc. | <a href="../about/sitemap.html" class="footer">Site Map</a> | <a href="../about/privacy.html" class="footer">Privacy Policy</a></td>
   </tr>
 </tbody></table></center><br>
 
