--- a/n/na/nab/nabiscoworld.com.html
+++ b/n/na/nab/nabiscoworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nabiscoworld.com privacy policy that was archived on 2005-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051226040259id_/http%3A//nabiscoworld.com/misccontent/privacy_policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nabiscoworld.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615013725id_/http%3A//nabiscoworld.com/misccontent/privacy_policy.aspx) for the most accurate reproduction.-->
 
 <html><head>
 		<title>NabiscoWorld.com</title>
@@ -23,7 +23,7 @@ A.dkbbobh:hover{font-size:9px; font-family:Verdana, Arial, Helvetica, sans-serif
 	</head>
 	<body bgcolor="#ffffff">
 		<form name="frmPage" method="post" action="privacy_policy.aspx" id="frmPage">
-<input type="hidden" name="__VIEWSTATE" value="dDwtMTkyNTEyMzI0NDs7bDx1Y01haW5OYXY6TWFpbl9uYXZfbGlua3MxOmlibG9naW5PZmY7Pj4=">
+<input type="hidden" name="__VIEWSTATE" value="dDwxNjYyMzI1ODkzOztsPHVjTWFpbk5hdjpNYWluX25hdl9saW5rczE6aWJsb2dpbk9mZjs+Pg==">
 
 		<div align="center">
 			<!-- begin div for masthead, body -->
@@ -434,7 +434,7 @@ A.dkbbobh:hover{font-size:9px; font-family:Verdana, Arial, Helvetica, sans-serif
 			<a href="javascript:getNWPage('contactus');" class="dkbbobh">E-mail us </a>
 			<br>
 			<br>
-			We would be happy to answer your questions or hear your concerns.<br><br>© 2004 KF Holdings. </td>
+			We would be happy to answer your questions or hear your concerns.<br><br>© 2006 KF Holdings. </td>
 						</tr>
 						
 					</tbody></table>
@@ -452,16 +452,17 @@ A.dkbbobh:hover{font-size:9px; font-family:Verdana, Arial, Helvetica, sans-serif
 			<td width="156"><img src="/images/common/spacer.gif" width="156" height="1"></td>
 			<td width="585" align="left">
 				<div id="navFooterTwo">
-<strong><a href="/default.aspx" class="drkgrey">Home</a></strong> | 
-<strong><a href="/games/default.aspx" class="drkgrey">Games</a></strong> | 
-<strong><a href="/promotions/default.aspx" class="drkgrey">Promotions</a></strong> | 
-<strong><a href="/brands/default.aspx" class="drkgrey">Our Brands</a></strong> | 
-<strong><a href="/recipes/default.aspx" class="drkgrey">Recipes</a></strong> | 
-<strong><a href="/sensiblesnacking/" class="drkgrey">Sensible Snacking</a></strong> | 
-<strong><a href="/misccontent/contactus/contact.aspx?m=contact_us" class="drkgrey">Help</a></strong><br>
-© 1999-2005 KF Holdings. All Rights Reserved. 
-<a href="/misccontent/privacy_policy.aspx" class="drkgrey" style="text-decoration: underline">Privacy Notice</a> | 
-<a href="http://www.kraftapps.com/legal/terms.asp?referrer=nabiscoworld" class="drkgrey" style="text-decoration: underline" target="_blank">Terms of Use</a>
+<strong><a href="/default.aspx" class="drkgrey">Home</a></strong> | <strong><a href="/games/default.aspx" class="drkgrey">
+		Games</a></strong> | <strong><a href="/promotions/default.aspx" class="drkgrey">
+		Promotions</a></strong> | <strong><a href="/brands/default.aspx" class="drkgrey">
+		Our Brands</a></strong> | <strong><a href="/recipes/default.aspx" class="drkgrey">
+		Recipes</a></strong> | <strong><a href="/sensiblesnacking/" class="drkgrey">Sensible 
+		Snacking</a></strong> | <strong><a href="/misccontent/contactus/contact.aspx?m=contact_us" class="drkgrey">
+		Help</a></strong><br>
+©
+<span id="FooterNav_Footer_links_div1_lblDate">1999-2006</span>
+KF Holdings. All Rights Reserved. <a href="/misccontent/privacy_policy.aspx" class="drkgrey" style="TEXT-DECORATION: underline">
+	Privacy Notice</a> | <a href="http://www.kraftapps.com/legal/terms.asp?referrer=nabiscoworld" class="drkgrey" style="TEXT-DECORATION: underline" target="_blank">Terms of Use</a>
 
 				<br>&nbsp;
 				<table border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff">
