--- a/u/us/usa/usagc.org.html
+++ b/u/us/usa/usagc.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the usagc.org privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217142254id_/http%3A//www.usagc.org/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the usagc.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615014444id_/http%3A//www.usagc.org/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,8 +10,8 @@
 		<meta content="follow" name="robots"> <!-- online green card,green card, green card lottery, green card lottery online, online green card lottery, immigration, immigration services, DV lottery, DV, visa, USA, travel, live,work, live and work at USA -->
 		<meta name="Description" content="Green Card Lottery: Information and registration services, We Guarantee Error-Free Application Preparation and Submission. Live and work at the USA.">
 		<link href="include/general.css" rel="stylesheet" type="text/css">
-		<script src="include/functions.js"></script><link rel="alternate" media="print" href="https://web.archive.org/web/20051217142254id_/http%3A//www.usagc.org/privacy.aspx?print=true">
-		<script src="include/print.js"></script><link rel="alternate" media="print" href="https://web.archive.org/web/20051217142254id_/http%3A//www.usagc.org/privacy.aspx?print=true">
+		<script src="include/functions.js"></script><link rel="alternate" media="print" href="https://web.archive.org/web/20060615014444id_/http%3A//www.usagc.org/privacy.aspx?print=true">
+		<script src="include/print.js"></script><link rel="alternate" media="print" href="https://web.archive.org/web/20060615014444id_/http%3A//www.usagc.org/privacy.aspx?print=true">
 	</head>
 	<body>
 		<form name="Form1" method="post" action="privacy.aspx" id="Form1">
@@ -22,8 +22,8 @@
 				<tbody><tr>
 					<td colspan="3">
 						<table width="100%" border="0" cellpadding="0" cellspacing="0">
-								<tbody><tr height="75">
-		<td background="images/header_bg.gif" colspan="3"><a href="http://www.usagc.org/index.aspx?afk=#{afk}"><img src="images/header_left.jpg" alt="USAGC.ORG green card lottery services" width="210" height="75" border="0"></a><img src="images/header_right.jpg" alt="" width="568" height="75" border="0"></td>
+							<tbody><tr>
+		<td height="75" background="images/header_bg.gif" colspan="3"><a href="http://www.usagc.org/index.aspx?afk=#{afk}"><img src="images/header_left.jpg" alt="USAGC.ORG green card lottery services" width="210" height="75" border="0"></a><img src="images/header_right.jpg" alt="" width="568" height="75" border="0"></td>
 	</tr>
 	<script>
 	if(screen.width > 805){
@@ -32,9 +32,9 @@
 			document.write('<style type="text/css">.headWidth{width:57%};</style>');
 		}
 	</script><style type="text/css">.headWidth{width:57%};</style>
-	<tr height="38">
+	<tr>
 		<!-- left Part-->
-		<td width="162" class="textWhite" align="center" background="images/strip_bg.gif" nowrap=""><b>Select Your Language &gt;&gt;</b></td>	
+		<td height="38" width="162" class="textWhite" align="center" background="images/strip_bg.gif" nowrap=""><b>Select Your Language &gt;&gt;</b></td>	
 		<td background="images/strip_bg.gif" class="headWidth">
 			<table width="100%" cellpadding="0" cellspacing="0" border="0">
 	       		<tbody><tr>				
@@ -104,7 +104,7 @@
 							</tr>
 							
 							<tr>
-								<td background="images/red_bt_bg.jpg" height="36" align="center"><a class="languages" href="register.aspx"><b>Register 
+								<td background="images/red_bt_bg.jpg" height="36" align="center"><a class="languages" href="step1.aspx"><b>Register 
 											Now !</b></a></td>
 							</tr>
 							
@@ -120,7 +120,7 @@
 								<td class="linkleftTD"><a href="eligibility.aspx">Free ! Eligibility Test</a></td>
 							</tr>
 							<tr>
-								<td class="linkleftTD"><a href="register.aspx">How to Register ?</a></td>
+								<td class="linkleftTD"><a href="step1.aspx">How to Register ?</a></td>
 							</tr>
 							<tr>
 								<td class="linkleftTD"><a href="requirements.aspx">Requirements</a></td>
@@ -157,10 +157,13 @@
 										a Friend</a></td>
 							</tr>
 							<tr>
+								<td class="linkblueTD"><a href="winnerspage.aspx">Winners' Testimonials</a></td>
+							</tr>
+							<tr>
 								<td class="linkblueTD">
 									<script>
 								document.write('<a href="javascript:void window.external.AddFavorite(\''+document.location+'\',\'Green Card Lottery information and registration\')">Bookmark</a>');
-									</script><a href="javascript:void window.external.AddFavorite('https://web.archive.org/web/20051217142254id_/http%3A//www.usagc.org/privacy.aspx','Green Card Lottery information and registration')">Bookmark</a>
+									</script><a href="javascript:void window.external.AddFavorite('https://web.archive.org/web/20060615014444id_/http%3A//www.usagc.org/privacy.aspx','Green Card Lottery information and registration')">Bookmark</a>
 								</td>
 							</tr>
 							<tr>
@@ -194,7 +197,7 @@
 								<td height=5></td>
 							</tr>						
 							<tr >
-								<td class="linkblueTD"><a href="register.aspx">Register Now !</a></td>
+								<td class="linkblueTD"><a href="step1.aspx">Register Now !</a></td>
 							</tr>
 							<tr>
 								<td height=5></td>
@@ -216,7 +219,7 @@
 									<span class="textBlue">
 										<b>Live, Work and Study in UNITED STATES OF AMERICA</b></span><br>
 									<br>
-									<a href="register.aspx" class="textRed">Click Here to Register Online !</a><br>
+									<a href="step1.aspx" class="textRed">Click Here to Register Online !</a><br>
 									<span class="textBlue">WINNERS will get FREE Air Line Ticket to USA*</span><br>
 									<br>
 									<span class="H2">PRIVACY POLICY AND STATEMENT OF www.usagc.org</span>
@@ -348,7 +351,7 @@
 							</tr>
 							<tr>
 								<td align="center">
-								<div class="tableButton" align="center" onclick="document.location.href='register.aspx';">
+								<div class="tableButton" align="center" onclick="document.location.href='step1.aspx';">
 									<table id="Table2" style="WIDTH: 420px; HEIGHT: 35px" height="50" cellspacing="0" bordercolordark="darkblue" cellpadding="0" width="420" align="center" bgcolor="#003366" bordercolorlight="slateblue" border="4">
 										<tbody><tr>
 											<td align="center">
@@ -503,7 +506,7 @@ USAGC Organization, as a nongovernmental entity providing a value added service 
 		<a href="terms.aspx" class="textBlack"><b>Terms &amp; Conditions</b></a>&nbsp;&nbsp;<img src="images/i_star.gif" alt="" width="13" height="12" border="0">&nbsp;&nbsp;
 		<a href="privacy.aspx" class="textBlack"><b>Privacy policy</b></a>&nbsp;&nbsp;<img src="images/i_star.gif" alt="" width="13" height="12" border="0">&nbsp;&nbsp;
 		<a href="about.aspx" class="textBlack"><b>About US</b></a>&nbsp;&nbsp;<img src="images/i_star.gif" alt="" width="13" height="12" border="0">&nbsp;&nbsp;
-		<a href="https://usagc.org/admin/login_affl.aspx" class="textBlack"><b>Affiliates</b></a>&nbsp;&nbsp;<img src="images/i_star.gif" alt="" width="13" height="12" border="0">&nbsp;&nbsp; 
+		<a href="/admin/login_affl.aspx" class="textBlack"><b>Affiliates</b></a>&nbsp;&nbsp;<img src="images/i_star.gif" alt="" width="13" height="12" border="0">&nbsp;&nbsp; 
 		<a href="index.aspx" class="textBlack"><b>Homepage</b></a>&nbsp;&nbsp;<img src="images/i_home.gif" alt="" width="16" height="14" border="0">&nbsp;&nbsp;
 		
 		</td>					
